<resources>
    <string name="app_name">Calc aposentadoria</string>
    <string name="calcule_quanto_tempo_falta_para_sua_aposentadoria">Calcule quanto tempo falta para sua aposentadoria:</string>
    <string name="digite_sua_idade">Digite sua idade:</string>
    <string name="calcular">Calcular</string>
    <string name="digite_sua_idade_">Digite sua idade:</string>
    <string name="selecione_seu_sexo">Selecione seu sexo:</string>
    <string name="anos_trabalhados_de_carteira_assinada">Anos trabalhados de carteira assinada:</string>
    <string name="anos_trabalhado">Anos trabalhado</string>
    <string name="teste">teste</string>
    <string-array name="opcoessexo">
        <item>Masculino</item>
        <item>Feminino</item>
    </string-array>
</resources>